--- a/src/scss/_slidershow.scss
+++ b/src/scss/_slidershow.scss
@@ -13,7 +13,6 @@
       top: 50%;
       color: white;
       margin: 0 5rem;
-      //   transition: 0.6s ease;
     }
   }
 
@@ -37,7 +36,7 @@
   &__dots {
     display: flex;
     position: absolute;
-    top: 86%;
+    top: 90%;
     right: 50%;
     transform: translateX(50%);
     &-dot {
@@ -51,6 +50,17 @@
       &.active {
         transform: scale(1.3);
       }
+    }
+  }
+
+  &__edge {
+    position: absolute;
+    width: 100%;
+    height: 2.7rem;
+    bottom: 0;
+    &--sub {
+      height: 3rem;
+      fill: #fff;
     }
   }
 }
@@ -87,7 +97,7 @@
   &__content {
     width: 100%;
     position: absolute;
-    top: 45%;
+    top: 55%;
     left: 50%;
     color: white;
     transform: translate(-50%, -50%);
