finishing the guide section

--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -1,6 +1,6 @@
 .menu {
   background-color: #fff;
-  padding: 9rem 11rem;
+  padding: 9rem 11rem 5rem 11rem;
   &__intro {
     text-align: center;
 
