finish testimonial section

--- a/src/scss/_guide.scss
+++ b/src/scss/_guide.scss
@@ -1,6 +1,6 @@
 .guide {
   background-color: #fff;
-  padding: 3rem 6rem;
+  padding: 3rem 6rem 9rem 6rem;
   &__grid {
     display: grid;
     grid-template-columns: repeat(3, 33.33%);
