--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,4 @@
+@import "./mediaquery";
 @import "./reset";
 @import "./variables";
 @import "./container";
@@ -12,3 +13,5 @@
 @import "./brand";
 @import "./footer";
 @import "./right";
+@import "./toup";
+@import "./edge";
