--- a/src/scss/_category.scss
+++ b/src/scss/_category.scss
@@ -1,6 +1,6 @@
 .category {
   background-color: #fff;
-  overflow: hidden;
+  // overflow: hidden;
 
   &__intro {
     padding-top: 8rem;
@@ -35,12 +35,68 @@
     opacity: 0;
     transform: translateY(20rem);
     transition: all 2s cubic-bezier(0.23, 1, 0.32, 1);
+    @include respond(tab-nor) {
+      display: block;
+      margin: 0 auto 4rem auto;
+      // margin: 0 0 3rem 23rem;
+    }
+    @include respond(phone) {
+      width: 100%;
+      margin: 0 auto 2rem auto;
+      // margin: 0;
+    }
   }
 
   &__content {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     padding: 0 10.5rem 7rem 10.5rem;
-    // margin-bottom: 3rem;
+
+    @include respond(tab-land) {
+      padding: 0 6.5rem 6rem 6.5rem;
+    }
+    @include respond(tab-nor) {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+    }
+    @include respond(phone) {
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(3, 1fr);
+      padding: 0 3.5rem 3.5rem 3.5rem;
+      gap: 2rem;
+    }
+    &--left {
+      @include respond(tab-nor) {
+        grid-row: 2/-1;
+        grid-column: 1/2;
+      }
+      @include respond(phone) {
+        grid-row: 2/3;
+        grid-column: 1/2;
+        margin-bottom: 2rem;
+      }
+    }
+    &--right {
+      @include respond(tab-nor) {
+        grid-row: 2/-1;
+        grid-column: 2/-1;
+      }
+      @include respond(phone) {
+        grid-row: 3/4;
+        grid-column: 1/2;
+      }
+    }
+
+    &--center {
+      @include respond(tab-nor) {
+        grid-row: 1/2;
+        grid-column: 1/-1;
+      }
+      @include respond(phone) {
+        grid-row: 1/2;
+        grid-column: 1/-1;
+      }
+    }
   }
 
   &__box {
