--- a/src/scss/_images.scss
+++ b/src/scss/_images.scss
@@ -7,6 +7,14 @@
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(4, 1fr);
     gap: 3rem;
+    @include respond(tab-nor) {
+      grid-template-rows: repeat(4, 1fr);
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @include respond(phone) {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 65rem 1fr 1fr;
+    }
 
     & > * {
       width: 100%;
@@ -15,19 +23,51 @@
     &--left {
       grid-column: 1/3;
       grid-row: 1/-1;
+      @include respond(tab-nor) {
+        grid-row: 1/3;
+        grid-column: 1/-1;
+      }
+      @include respond(phone) {
+        grid-row: 1/2;
+        grid-column: 1/2;
+      }
     }
     &--center {
       height: 100%;
       grid-column: 3/4;
       grid-row: 1/-1;
+      @include respond(tab-nor) {
+        grid-row: 3/5;
+        grid-column: 1/2;
+      }
+      @include respond(phone) {
+        grid-row: 2/3;
+        grid-column: 1/2;
+      }
     }
 
     &--right {
       &-1 {
         grid-column: 4/-1;
         grid-row: 1/2;
+        @include respond(tab-nor) {
+          grid-row: 3/4;
+          grid-column: 2/-1;
+        }
+        @include respond(phone) {
+          grid-row: 3/4;
+          grid-column: 1/2;
+        }
       }
       &-2 {
+        @include respond(tab-nor) {
+          grid-row: 4/5;
+          grid-column: 2/-1;
+        }
+        @include respond(phone) {
+          grid-row: 4/5;
+          grid-column: 1/2;
+        }
         grid-row: 2/2;
         grid-column: 4/-1;
       }
