--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -1,6 +1,9 @@
 .menu {
   background-color: #fff;
   padding: 9rem 11rem 5rem 11rem;
+  @include respond(phone) {
+    padding: 6rem 4rem 4rem 4rem;
+  }
   &__intro {
     text-align: center;
 
@@ -11,6 +14,9 @@
       letter-spacing: 0.2rem;
       font-style: italic;
       margin-bottom: 2rem;
+      @include respond(phone) {
+        font-size: 1.4rem;
+      }
     }
     &-2 {
       font-size: 3.7rem;
@@ -18,6 +24,9 @@
       font-weight: 900;
       color: #30271c;
       margin-bottom: 5rem;
+      @include respond(phone) {
+        font-size: 3rem;
+      }
       &::after {
         content: "";
         display: block;
@@ -34,13 +43,24 @@
     align-items: center;
     justify-content: space-between;
     // flex-grow: 1;
+    @include respond(tab-port) {
+      flex-direction: column;
+    }
     &--left {
       flex-grow: 1;
       margin-right: 3.5rem;
+      @include respond(tab-port) {
+        width: 100%;
+        margin-right: 0;
+      }
     }
     &--right {
       flex-grow: 1;
       margin-left: 3.5rem;
+      @include respond(tab-port) {
+        width: 100%;
+        margin-left: 0;
+      }
     }
   }
 
@@ -68,6 +88,9 @@
     &--des {
       color: $base-color;
       font-size: 1.6rem;
+      @include respond(phone) {
+        font-size: 1.4rem;
+      }
     }
     &--status {
       font-size: 1.7rem;
@@ -86,6 +109,9 @@
       text-transform: uppercase;
       color: $black;
       margin-right: 0.5rem;
+      @include respond(phone) {
+        font-size: 1.7rem;
+      }
     }
   }
   &__price {
