--- a/src/scss/_right.scss
+++ b/src/scss/_right.scss
@@ -5,12 +5,21 @@
   align-items: center;
   justify-content: space-between;
   padding: 2rem 2.5rem;
+  @include respond(phone) {
+    flex-direction: column;
+  }
   &__title {
     font-weight: 300;
     color: #acacac;
+    @include respond(phone) {
+      margin-bottom: 1rem;
+    }
   }
   &__media {
     display: flex;
+    @include respond(phone) {
+      margin-bottom: 1rem;
+    }
     li {
       font-size: 2rem;
       a {
