--- a/src/scss/_testimonial.scss
+++ b/src/scss/_testimonial.scss
@@ -4,6 +4,12 @@
   flex-direction: column;
   align-items: center;
   padding: 0 11rem 8rem 11rem;
+  @include respond(tab-nor) {
+    padding: 0 8rem 6rem 8rem;
+  }
+  @include respond(phone) {
+    padding: 0 2rem 2rem 2rem;
+  }
 
   &__sliderarea {
     display: flex;
@@ -33,6 +39,9 @@
     transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275),
       opacity 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     padding: 0 6rem;
+    @include respond(tab-port) {
+      padding: 0 3rem;
+    }
 
     &-des {
       font-size: 2.2rem;
@@ -42,6 +51,10 @@
       color: $black;
       letter-spacing: 0.1rem;
       margin-bottom: 3.5rem;
+      @include respond(phone) {
+        font-size: 1.5rem;
+        margin-bottom: 1.5rem;
+      }
     }
 
     &-customer {
